--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "node-1-afternoon",
   "version": "1.0.0",
-  "description": "<img src=\"https://devmounta.in/img/logowhiteblue.png\" width=\"250\" align=\"right\">",
+  "description":
+    "<img src=\"https://devmounta.in/img/logowhiteblue.png\" width=\"250\" align=\"right\">",
   "main": "index.js",
   "scripts": {
+    "start": "node ./server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
